--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing='20'>
         <tr>
-            <td><img src="C:\Web_Development\HTML_Personal_site\images\pratik.jpeg" alt="Pratik Profile Picture" width="200" height="230"></td>
+            <td><img src="images\pratik.jpeg" alt="Pratik Profile Picture" width="200" height="230"></td>
             <td>
                 <h1>Pratik Guruprasad Hangandi</h1>
                 <p><em>Student At <strong><a href="http://www.unipune.ac.in/">SPPU University</a></strong></em></p>
